<resources>
    <string name="app_name">Sylvester CV</string>
    <string name="header_text">Sylvester Ranjith Francis</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_message">Message</string>
    <string name="action_submit">Send</string>
    <string name="msg_error_submitting_post">Error submitting post</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="about_para1">The process of automating everyday tasks and making them more efficient by utilizing the computing power of a machine greatly fascinates me. Features such as recommendations of search phrases and the display of relevant product promotions based on one’s search history made me curious. The prospect of a computer actually knowing the user and responding accordingly inspired me to learn in detail about such technologies. This drove me to choose Computer Science as one of my core subjects in high school. I followed this up with an undergraduate degree in Computer Science and Engineering at Panimalar Engineering College affiliated to Anna University Chennai.
.</string>
    <string name="about_para2">Ever since a tender age, I have always been fascinated by the prospect of using a computer. I was introduced to computer programming at a tender age when I used BASIC to create rudimentary programs. After working on some easier computational puzzles, I wanted to delve deeper into the world of Web Dev as it afforded an opportunity for me to also fine tune my creative skills. I was inclined towards computer science engineering as the subject of study in my undergraduate as the curriculum of this course necessitated a reflection of my competencies in Programming, Analysis and Problem Solving.Having an urge to learn something new I expanded on the concepts taught in college by learning various other Programming Paradigms and Data structures. I have done a course on Python Data Structures from University of Michigan on Coursera and secured a distinction in that course.
</string>
    <string name="about_para3">My experience of undergraduate studies has been thoroughly valuable through which I have enhanced my expertise. I studied a wide array of subjects, which included Design of Algorithms and Algorithm Analysis. Algorithm analysis turned out to be one of my favorite subjects and I improvised myself by attending a wide array of courses like Intro to Algorithms at Udacity. During my undergraduate course I was also introduced to  Artificial intelligence which intrigued me to learn more about how machines automate themselves, So  I attended various courses to further delve into concepts like machine learning,neural networks, natural language processing from Artificial Intelligence (BerkeleyX - CS188.1x), Machine Learning - Stanford University (Coursera), Deep Learning (Udacity) courses. Fortunately, my final year project on Mobile Recommender System using Sentiment analysis was made on similar concepts. It designed a novel Recommendation engine which suggested phones to a particular user by performing sentiment analysis on the reviews of the individual phone model. The practical insight gained through this project has equipped me well. In order to further my perception of the practical attributes of Machine Learning and Recommender Systems I did a course at Coursera named Introduction to Recommender Systems offered by University of Minnesota.
                                                  My experience during the said course provided me ample exposure whilst I learnt how Recommender systems work, the various classifications of a Recommender System, and also about the numerous algorithms used in the various recommendations. The research, which was undertaken while framing this project has also suitably, poised me to cope with similar work in a rigorous MS program.

                                                      During my sophomore year I had the opportunity to start a small initiative with some of my friends to educate students on the Importance of Web and Computer Science, during this tenure,I have worked on projects in Android Development for a well reputed company in India  which required me to  apply my theoretical knowledge and hone my technical skills, I designed a GPS tracking system for the company which is utilised to track the delivery trucks.This required me to work beyond my comfort zone and learn various concepts in Android Programming from courses offered at Udacity


                                     The myriad of interests I have encouraged me to engage in various extracurricular activities. As a member of the core organizing committee, I helped conduct “Xerone”, the national level technical symposium of my department. I led a team that won the overall championship in “Salvationz 2k14” another national level technical symposium.  I come from a family where everyone excels in academics. This has instilled a keen desire in me to pursue further graduate studies and research in a field, which has always enthralled and captivated me. Thus, I aspire to acquire a master’s degree in Computer engineering. I believe that my conviction in striving even after I have reached the top will certainly aid me in accomplishing my goals.
                                                         With my ability to look at the larger picture without losing sight of my goals, I am poised for a larger role in the industry with enhanced knowledge and superior education. My interests too are well aligned with the work being carried out by professors at your university and I would be very grateful if given an opportunity to pursue graduate studies at your institution and contribute to the research currently being done.

</string>
<string name="google_plus">+SylvesterRanjithFrancis</string>
<string name="skype">whitefire11343</string>
<string name="whatsapp">+(91)9789084865</string>
<string name="linkedin">www.linkedin.com/in/sylvesterranjith</string>
<string name="twitter">whitefire00700</string>
<string name="gmail">sylvesterranjithfrancis@gmail.com</string>
</resources>
