<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widgetId"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:background="#FFFFFF">





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:padding="25dp"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Reach me at:"
            android:textAlignment="center"
            android:textSize="24sp"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingBottom="20dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/gplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google"
                android:padding="5dp"
                />
            <TextView
                android:id="@+id/googleid_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/gplus"
                android:text="@string/google_plus"
                android:fontFamily="sans-serif-small"
                android:textSize="18sp"
                android:padding="5dp"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/twitter"
                android:text="@string/twitter"
                android:fontFamily="sans-serif-small"
                android:textSize="18sp"
                android:padding="5dp"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/linkedin"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/linkedin"
                android:text="@string/linkedin"
                android:fontFamily="sans-serif-small"
                android:textSize="18sp"
                android:padding="5dp"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/skype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/skype"
                android:padding="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/skype"
                android:text="@string/skype"
                android:fontFamily="sans-serif-small"
                android:textSize="18sp"
                android:padding="5dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/whatsapp"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/whatsapp"
                android:text="@string/whatsapp"
                android:fontFamily="sans-serif-small"
                android:textSize="18sp"
                android:padding="5dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gmail"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/gmail"
                android:text="@string/gmail"
                android:fontFamily="sans-serif-small"
                android:textSize="18sp"
                android:padding="5dp"
                />
        </RelativeLayout>

    </LinearLayout>
    </RelativeLayout>


</LinearLayout>