<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardMarginVertical"
        android:layout_marginLeft="@dimen/cardMarginHorizontal"
        android:layout_marginRight="@dimen/cardMarginHorizontal"
        android:layout_marginTop="@dimen/cardMarginVertical"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="15dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

               <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:text="Contact Me"
                   android:textAlignment="center"
                   android:textSize="24sp"
                   android:fontFamily="sans-serif-smallcaps"
                   android:padding="5dp"
                   />


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/contact_form_name"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/your_name"
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:layout_marginBottom="20dp"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/contact_form_email"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/your_email"
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:layout_marginBottom="20dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimary"
                    android:maxLines="1"
                    android:textSize="14sp" />


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/contact_form_subject"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/your_subject"
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:layout_marginBottom="20dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:paddingLeft="3dp"
                    android:text="@string/contact_form_message"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/your_message"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:height="180dp"
                    android:gravity="top"
                    android:inputType="text"
                    android:maxLines="8"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:paddingLeft="3dp"
                    android:text="suggestion"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/suggestions"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:height="180dp"
                    android:gravity="top"
                    android:inputType="text"
                    android:maxLines="8"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/post_message"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="1dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="1dp"
                    android:text="@string/contact_form_button"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />
            </LinearLayout>

        </ScrollView>


    </android.support.v7.widget.CardView>

</FrameLayout>